Camlp5 Version 7.04:
--------------------

* [19 Feb 18] Updated for ocaml version 4.06.1 and 4.06.2.
* [02 Jan 18] Fixed missing treatment of native, 32 and 64 integers.

Camlp5 Version 7.03:
--------------------

* [20 Oct 17] Updated (again) for ocaml version 4.06.0.

Camlp5 Version 7.02:
--------------------

* [07 Oct 17] Updated for ocaml version 4.06.0.
* [22 Jul 17] Now "a.[i] := b" generates a call to Bytes.set instead
  of String.set, as from ocaml version 4.02.0.
* [18 Jul 17] Updated for ocaml future version 4.05.1.
* [13 Jul 17] Compilation from OCaml version 4.00.0 now using parsetree
  distributed with OCaml (-I +compiler-libs), no more the one copied from
  OCaml sources (on ocaml_stuff directory). Set at "configure" time. (Not
  fully implemented: the magic numbers are still read in ocaml_stuff
  directory.) Is going to simplify Camlp5 update when new version of
  OCaml is released.
* [11 Jul 17] Fixed problem of associativity in backtracking grammars,
  preventing Coq to compile with CAMLP5PARAM=f or b.

Camlp5 Version 7.01:
--------------------

* [26 Jun 17] Fixed bug in associativity of entry levels in extensible
  grammars; was introduced by an old experiment, resulting a failure
  in Coq test-suite/success/rewrite_strat.v.
* [26 Jun 17] Fixed bug: compilation failed while using OCaml versions
  between 3.05 and 4.01.1, and jocaml versions.

Camlp5 Version 7.00:
--------------------

* [26 Jun 17] Release number is 7.00 instead of 6.18 because of big
  improvements on extensible grammars which can use now limited and
  full backtracking algorithms on demand.
* [16 Jun 17] Entry.parse_token has been renamed Entry.parse_token_stream.
* [04 Jun 17] Added limited backtracking (functional streams) to extensible
  grammars. Can be set with "Grammar.parse_algorithm Functional" or by
  setting the environment variable CAMLP5PARAM=f.
* [01 Jun 17] Backtrack parsing seems to work well now. Camlp5 and Coq can